# nostd-check

./: Cargo.toml  README.md
cli/: Cargo.toml  main.rs
res/: test_conditional.rs  test_std.rs
res/toml/: Cargo.toml
src/: lib.rs  meta.rs  source.rs  tests.rs
