[package]
name = "nostd-check-cli"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nostdchk"
path = "main.rs"

[dependencies]
nostd-check = { path = "../", version = "0.1.0" }