[package]
name = "sample"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]
edition = "2018"

[dependencies]
hashbrown = { version = "*", default-features = false }
async-std = { version = "*", default-features = false, optional = true }

[dev-dependencies]
async-std = { version = "*", default-features = false }

[build-dependencies]
async-std = { version = "*", default-features = false, optional = true }

[features]
default = ["std"]
std = ["async-std"]

[workspace]